Fixed some layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@
     background-color: #667799;
     align-content: center;
     width: 100%;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     right: 0;
